test/parse/expr/bad-unexpected.txt
;;; ERROR: 1
(module (func (module)))
(;; STDERR ;;;
parse/expr/bad-unexpected.txt:2:16: syntax error, unexpected MODULE
(module (func (module)))
               ^^^^^^
;;; STDERR ;;)
